# Corsac2D

./: CMakeLists.txt  Makefile
include/: CRSC.h
src/: main.cpp
